--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -9,7 +9,202 @@ html {
 }
 
 body {
-	background-color: #EFEFEF;
+	background-color: white;
 	min-height: 100%;
 	position: relative;
+}
+
+/* Navigation */
+#navigation{
+	height: 55px;
+	.navbar-inner{
+		height: 100%;
+	
+		background: $grayDarkest;
+
+		.container{
+		
+			height: 100%;
+
+			.brand{
+				padding-top: 12px;
+				padding-right: 15px;
+			}
+
+			.social-icons{
+				padding-top:15px;
+				margin-right: -1px;
+				float: right;
+
+
+				.social{
+					padding-left: 3px;
+					padding-right: 3px;
+				}
+			}
+
+			ul{
+			/*	border-left:1px black solid;
+				border-right:1px black solid;*/
+				height: 100%;
+				text-transform:uppercase;
+				font-size: 12px;
+				letter-spacing: 1px;
+
+
+				li{
+					
+
+					a{
+						padding: 22px 0px 0px 0px;
+						margin-left: 15px;
+						margin-right: 15px;
+						color: $grayLight;
+						text-shadow: 0.5px 0px $gray;
+						line-height: 12px;
+					}
+				}
+				li.active{
+					
+					a{
+						color:white;
+						background: $grayDarkest;
+						border-bottom: 2px $blue solid;
+					}
+				}
+
+				.divider-vertical{
+					height:100%;
+					border-left: 1px black solid;
+					border-right:1px $grayDark solid;
+				}
+			}
+		}
+	}
+}
+
+/* Search */
+#searchbar{
+	background: $grayLighter;
+	border-bottom: 1px solid $grayMedium;
+
+	.search{
+
+		margin-top: -10px;
+
+		label{
+			display: none;
+		}
+
+		form{
+			margin-bottom: 10px;
+		}
+
+		.mglass{
+			position: relative;
+			margin-bottom: -62px;
+			margin-left: 5px;
+			margin-top: 0px;
+
+		}
+
+		fieldset{
+			width: 77%;
+			display:inline-block;
+		}
+		#Search{
+			width: 100%;
+			input{
+				width: 94%;
+				height:35px;
+				border: none;
+				box-shadow: 0px 2px 2px  $grayLight inset;
+				padding-left: 40px;
+
+			}
+			::-webkit-input-placeholder { 
+				    color:    $grayDark;
+				}
+			:-moz-placeholder { 
+			    color:    $grayDark;
+			}
+			::-moz-placeholder {
+			    color:    $grayDark;
+			}
+			:-ms-input-placeholder { 
+			    color:    $grayDark;
+				}
+		}
+		.Actions{
+			display: inline-block;
+			width:20%;
+			padding-left: 17px;
+
+			input{
+				height:43px;
+				text-transform:uppercase;
+				text-shadow: 0px -2px 1px $blueDarker;
+				font-size: 12px;
+				letter-spacing: 1px;
+				padding: 10px 15px;
+				border: 1px $blueDark solid;
+				background-image: linear-gradient(to bottom, $blue, $blueDarker);
+				box-shadow: none;
+			}
+		}
+	}
+
+	.logo{
+		text-align: right;
+		padding-top: 10px;
+	}
+}
+
+/*Footer*/
+#footer{
+	width: 100%;
+	background: $gray;
+	position: absolute;
+	bottom:0px;
+
+	.container{
+		padding-top: 30px;
+		padding-bottom: 70px;
+		ul{
+			list-style-type: none;
+			margin: 0px;
+			li{
+				padding:3px;
+				a{
+					color: $white;
+					font-weight: 100;
+					font-size: 13px;
+					letter-spacing: 1px;
+					text-shadow: 0px -2px 1px $grayDarkest;
+				}
+
+				.social{
+					padding-right: 5px;
+				}
+
+			}
+		}
+
+		.website{
+			span{
+				margin-top: 0px;
+				color: white;
+				font-weight: 400;
+			}
+			a{
+				color: white;
+				font-weight: 100;
+				letter-spacing:1px;
+				text-decoration: underline;
+			}
+		}
+
+
+
+	}
 }
