--- a/themes/igf/scss/_variables.scss
+++ b/themes/igf/scss/_variables.scss
@@ -22,6 +22,7 @@ $white:                 #fff !default;
 
 // Accent colors
 // -------------------------
+$blueLight:				#42A1FC;
 $blue:                  #359BFC;
 $blueDark:				#2188EA;
 $blueDarker:            #0878E3;
