--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -56,8 +56,9 @@ body { background-color: white; min-height: 100%; position: relative; }
 #homepage .sessions { padding-top: 50px; padding-bottom: 50px; }
 #homepage .sessions .heading { padding-bottom: 10px; }
 #homepage .sessions .heading .link { text-align: right; padding-top: 10px; }
-#homepage .sessions .heading .link a { color: white; height: 45px; text-transform: uppercase; text-shadow: 0px -2px 1px #0878e3; font-size: 12px; letter-spacing: 1px; padding: 12px 10px; border: 1px #2188ea solid; background-image: linear-gradient(to bottom, #359bfc, #0878e3); box-shadow: none; border-radius: 4px; }
-#homepage .sessions .heading .link a:hover { text-decoration: none; }
+#homepage .sessions .heading .link .button { color: white; height: 45px; text-transform: uppercase; text-shadow: 0px -2px 1px #0878e3; font-size: 12px; letter-spacing: 1px; padding: 12px 10px; border: 1px #2188ea solid; background-image: linear-gradient(to bottom, #359bfc, #0878e3); box-shadow: none; border-radius: 4px; }
+#homepage .sessions .heading .link .button :hover { text-decoration: none; }
+#homepage .sessions .heading .link .button:hover { text-decoration: none; }
 #homepage .sessions .ses .span3 { margin-left: 10px; width: 230px; }
 #homepage .sessions .session-tile { border: 1px solid #d8d8d8; margin-bottom: 20px; }
 #homepage .sessions .session-tile .video { margin: 3px; }
