--- a/themes/igf/scss/_variables.scss
+++ b/themes/igf/scss/_variables.scss
@@ -92,7 +92,7 @@ $btnBackground:                     $white !default;
 $btnBackgroundHighlight:            darken($white, 10%) !default;
 $btnBorder:                         #ccc !default;
 
-$btnPrimaryBackground:              $linkColor !default;
+$btnPrimaryBackground:              $blue !default;
 $btnPrimaryBackgroundHighlight:     adjust-hue($btnPrimaryBackground, 20%) !default;
 
 $btnInfoBackground:                 #5bc0de !default;
@@ -277,7 +277,7 @@ $popoverArrowOuterColor:  rgba(0,0,0,.25) !default;
 // -------------------------
 $gridColumns:             12 !default;
 $gridColumnWidth:         60px !default;
-$gridGutterWidth:         20px !default;
+$gridGutterWidth:         10px !default;
 $gridRowWidth:            ($gridColumns * $gridColumnWidth) + ($gridGutterWidth * ($gridColumns - 1)) !default;
 
 // 1200px min
