--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -114,7 +114,7 @@ body {
 		#Search{
 			width: 100%;
 			input{
-				width: 94%;
+				width: 90%;
 				height:35px;
 				border: none;
 				box-shadow: 0px 2px 2px  $grayLight inset;
@@ -135,20 +135,17 @@ body {
 				}
 		}
 		.Actions{
+
 			display: inline-block;
-			width:20%;
+			width:15%;
 			padding-left: 17px;
 
 			input{
 				height:43px;
 				text-transform:uppercase;
-				text-shadow: 0px -2px 1px $blueDarker;
 				font-size: 12px;
 				letter-spacing: 1px;
-				padding: 10px 15px;
-				border: 1px $blueDark solid;
-				background-image: linear-gradient(to bottom, $blue, $blueDarker);
-				box-shadow: none;
+				
 			}
 		}
 	}
@@ -158,6 +155,7 @@ body {
 		padding-top: 10px;
 	}
 }
+
 
 /*Footer -------------------------------------------------- */
 #footer{
@@ -169,6 +167,7 @@ body {
 	.container{
 		padding-top: 30px;
 		padding-bottom: 70px;
+
 		ul{
 			list-style-type: none;
 			margin: 0px;
@@ -209,93 +208,151 @@ body {
 	}
 }
 /*HomePage -------------------------------------------------- */
-#homepage{
-	h3{
+#HomePage{
+
+	#homepage{
+		h3{
+			font-weight: normal;
+			font-size: 30px;
+			color: $grayDarkest;
+			margin: 0px;
+
+		}
+
+		.content{
+			padding-top: 50px;
+			padding-bottom: 50px;
+			
+			.social{
+				div{
+					
+					padding-top:5px;
+					padding-bottom: 5px;
+				}
+				.fb-like{
+					padding-left: 4px;
+				}
+			}
+			.text{
+				color: $grayDarkest;
+				font-size: 35px;
+				line-height: 35px;
+			}
+		}
+
+		.twitter{
+			margin-bottom: 50px;
+			border: 1px solid $grayMedium;
+		}
+
+		.speakers{
+
+			padding-bottom: 50px;
+			.heading{
+				
+				padding-bottom: 10px;
+
+				.link{
+					text-align: right;
+					padding-top: 20px;
+					text-decoration: underline;	
+
+				}
+			}
+		}	
+	}
+}
+/*SessionsHolder -------------------------------------------------- */
+#SessionsHolder{
+
+#wrap{
+	background: $grayLighter;
+}
+
+#filter-wrap{
+	height:100%;
+}
+
+	#sessionholder{
+		#session-wrap{
+			background: white;
+			border-left: 1px $grayMedium solid;
+			margin-left: 9px;
+		}
+
+		.sessions{
+			background: white;
+			padding-top: 30px;
+			height:100%;
+
+			.heading{
+				padding-left: 10px;
+			}
+
+		}
+		.filter{
+			padding-top: 20px;
+			background: $grayLighter;
+			margin-left: -46%;
+			padding-left: 46%;
+			margin-right: -10%;
+
+			form{
+				#Text{
+					input{
+						width:50%;
+					}
+				}
+				.Actions{
+					input{
+						height:43px;
+						text-transform:uppercase;
+						font-size: 12px;
+						letter-spacing: 1px;
+						
+					}
+				}
+			}	
+		}
+	}
+
+	#searchbar{
+		.logo{
+			text-align: left;
+		}
+	}
+}
+
+/*Sessions -------------------------------------------------- */
+.sessions{
+		padding-bottom: 50px;
+
+		h3{
 		font-weight: normal;
 		font-size: 30px;
 		color: $grayDarkest;
 		margin: 0px;
 
 	}
-
-	.content{
-		padding-top: 50px;
-		padding-bottom: 50px;
-		
-		.social{
-			img{
-
-				padding-top:5px;
-				padding-bottom: 5px;
-			}
-		}
-		.text{
-			color: $grayDarkest;
-			font-size: 35px;
-			line-height: 35px;
-		}
-	}
-
-	.twitter{
-		border: 1px solid $grayMedium;
-	}
-
-	.speakers{
-
-		padding-top: 50px;
-		.heading{
-			
-			padding-bottom: 10px;
-
-			.link{
-				text-align: right;
-				padding-top: 20px;
-				text-decoration: underline;	
-
-			}
-		}
-	}
-	.sessions{
-		padding-top: 50px;
-		padding-bottom: 50px;
-		.heading{
-			
+		.heading{		
 			padding-bottom: 10px;
 
 		.link{
 				text-align: right;
-				padding-top: 10px;
-				
-				
-
-				.button{
+				padding-top: 10px;	
+			
+				.btn{
 					color:white;
-					height:45px;
+					padding: 10px 10px;
 					text-transform:uppercase;
-					text-shadow: 0px -2px 1px $blueDarker;
 					font-size: 12px;
 					letter-spacing: 1px;
-					padding: 12px 10px;
-					border: 1px $blueDark solid;
-					background-image: linear-gradient(to bottom, $blue, $blueDarker);
-					box-shadow: none;
-					border-radius: 4px;
-					:hover{
-						text-decoration:none;
-					}
-
 				}
-				.button:hover{
-						text-decoration:none;
-					}
+				
 			}
 		}
 		.ses{
-			.span3{
-
-				margin-left:10px;
-				width: 230px;
-			}
+	
 		}
 		.session-tile{
 			border: 1px solid $grayMedium;
@@ -306,7 +363,6 @@ body {
 			}
 
 			.text-wrap{
-
 				margin: 5px;
 
 				.title{
@@ -342,14 +398,6 @@ body {
 			}
 		}
 	}
-
-
-
-
-
-
-
-}
 
 /*Responsiveness -------------------------------------------------- */
 
