--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -72,7 +72,6 @@ body { background-color: white; min-height: 100%; position: relative; }
 .sessions .heading { padding-bottom: 10px; }
 .sessions .heading .link { text-align: right; padding-top: 10px; }
 .sessions .heading .link .btn { color: white; padding: 10px 10px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
-.sessions .ses span3 { margin: 5px; }
 .sessions .session-tile { border: 1px solid #d8d8d8; margin-bottom: 20px; }
 .sessions .session-tile .video { margin: 3px; }
 .sessions .session-tile .text-wrap { margin: 5px; }
@@ -82,6 +81,16 @@ body { background-color: white; min-height: 100%; position: relative; }
 .sessions .session-tile .text-wrap .date { color: #696b6f; font-size: 12px; font-weight: 500; }
 .sessions .session-tile .text-wrap .tags { padding-top: 10px; color: #696b6f; font-size: 13px; font-weight: 500; }
 .sessions .session-tile .text-wrap .tags a { font-weight: normal; }
+
+/* meetings holder -------------------------------------------------- */
+#MeetingsHolder .promo { background: #f3f3f3; border: 1px solid #d8d8d8; -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; margin-top: 30px; margin-bottom: 20px; }
+#MeetingsHolder .promo .dark { background-color: #d8d8d8; }
+
+/* meeting -------------------------------------------------- */
+#MeetingController #speakers-wrap .thumbnail > img { margin-left: 0; margin-right: 0; }
+
+/* thumbnails -------------------------------------------------- */
+.thumbnail { -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; text-decoration: none; }
 
 /*Responsiveness -------------------------------------------------- */
 @media (max-width: 979px) { #searchbar .search #Search input { width: 75%; }
